samples: common: mcumgr_bt_ota_dfu: fix IMG_ERASE_PROGRESSIVELY deps
Fixed the dependency for the IMG_ERASE_PROGRESSIVELY Kconfig to keep
this option disabled for devices without the FLASH_HAS_EXPLICIT_ERASE
capability.

Ref: NCSDK-29186

Signed-off-by: Kamil Piszczek <Kamil.Piszczek@nordicsemi.no>

--- a/samples/common/mcumgr_bt_ota_dfu/Kconfig
+++ b/samples/common/mcumgr_bt_ota_dfu/Kconfig
@@ -43,6 +43,7 @@ config MCUMGR_TRANSPORT_BT_AUTHEN
 
 config IMG_ERASE_PROGRESSIVELY
 	default y
+	depends on FLASH_HAS_EXPLICIT_ERASE
 
 if MCUMGR_TRANSPORT_BT_REASSEMBLY
 
